tests/test_exception/good/exceptions_squared.catala
## Test

```catala
new scope A:
  param x content int

scope A:
  label base_x
  def x := 0

  label exception_x
  exception base_x
  def x := 1

  exception exception_x
  def x := 2
```
