tests/test_exception/bad/exceptions_cycle.catala
## Test

```catala
new scope A:
  param x content int

scope A:
  label base_x
  exception exception_exception_x
  def x := 0

  label exception_x
  exception base_x
  def x := 1

  label exception_exception_x
  exception exception_x
  def x := 2
```
